Record GPU memory usage for OffscreenCanvas/ImageBitmap on V8

this allows V8 to know when we are using too much memory, which
triggers a GC.

Bug: 897733,842693
Change-Id: I74c7589ab78a753132e54d5eac3c28793580c266
Reviewed-on: https://chromium-review.googlesource.com/c/1297067
Commit-Queue: Fernando Serboncini <fserb@chromium.org>
Reviewed-by: Mohammad Reza Zakerinasab <zakerinasab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603527}
Former-commit-id: 754c97a74b5f84f5d7291c330dc23681cf600cfe